<resources>
    <string name="app_name" translatable="false">YouNews</string>
    <string name="go" translatable="false">go</string>
    <string name="ALL_World_is_heare">All world is heare</string>
    <string name="no_internet_connection">no internet conection</string>

    <string name="settings_min_time_default">121</string>

    <string name="select_date">Select Date</string>

    <string name="ready">Ready</string>

    <string name="no_find_news">no find news</string>


    <string name="title_activity_settings">Settings</string>


    <string name="settings_order_by_category">Category</string>
    <string name="settings_order_by_category_value" translatable="false">time</string>
    <string name="settings_order_by_cauntry">Country</string>
    <string name="settings_order_by_cauntry_value" translatable="false">time</string>


    //String Preference
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>

    <!-- Strings For Category Preference [CHAR LIMIT=30] -->
    <string name="all">All</string>
    <string name="all_value" translatable="false"></string>

    <string name="sport">Sport</string>
    <string name="sport_value" translatable="false">sport</string>

    <string name="football">Football</string>
    <string name="football_value" translatable="false">football</string>

    <string name="culture">Culture</string>
    <string name="culture_value" translatable="false">culture</string>

    <string name="business">Business</string>
    <string name="business_value" translatable="false">business</string>

    <string name="economic">Economic</string>
    <string name="economic_value" translatable="false">economic</string>

    <string name="travel">Travel</string>
    <string name="travel_value" translatable="false">travel</string>

    <!-- Strings For Country Preference [CHAR LIMIT=30] -->
    <string name="united_s_a">USA</string>
    <string name="united_s_a_value" translatable="false">USA</string>

    <string name="ukraine">Ukrain</string>
    <string name="ukraine_value" translatable="false">ukraine</string>

    <string name="europe">Europe</string>
    <string name="europe_value" translatable="false">europe</string>

    <string name="russia">Russia</string>
    <string name="russian_value" translatable="false">russia</string>

    <string name="spain">Spain</string>
    <string name="spane_value" translatable="false">spain</string>

    <string name="turkey">Turkey</string>
    <string name="turk_value" translatable="false">turkey</string>


    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="category_news">Category News</string>
    <string name="settings_order_by_label">Category News</string>
    <string name="settings_category_order_by_key" translatable="false">order_by_category</string>
    <string name="settings_category_order_by_default" translatable="false">@string/all_value</string>


    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="country_news">Country News</string>
    <string name="settings_order_by_label_2">Country</string>
    <string name="settings_country_order_by_key" translatable="false">order_by_country</string>
    <string name="settings_country_order_by_default" translatable="false">@string/ukraine_value</string>
</resources>
