<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/category_news"
        android:entries="@array/settings_order_by_category"
        android:entryValues="@array/settings_order_by_category_value"
        android:key="@string/settings_category_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/country_news"
        android:entries="@array/settings_order_by_country"
        android:entryValues="@array/settings_order_by_country_value"
        android:key="@string/settings_country_order_by_key"
        android:title="@string/settings_order_by_label_2" />



</PreferenceScreen>